# rust-kraken-bot

./: .env.example  Cargo.toml  README.md
src/: error_handling.rs  main.rs
src/kraken/: client.rs  mod.rs  orderbook.rs  utils.rs  websocket_auth.rs  withdrawl.rs
src/mongo/: client.rs
